--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ a.active {
 ==================================================*/
 
 #home {
-    background: url(../img/home-bg-2.jpg);
+    background: url(../img/home.jpg);
     background-size: cover;
     height: 100vh;
 }
